Create Project - OK

--- a/html/land-page.html
+++ b/html/land-page.html
@@ -84,7 +84,7 @@
                   Não tem uma conta?
                   <a href="/register/user" class="text-primary text-gradient font-weight-bold">Criar Conta</a><br/>
                   Criar novo projeto?
-                  <a href="#" class="text-primary text-gradient font-weight-bold">Criar Projeto</a>
+                  <a href="/register/project" class="text-primary text-gradient font-weight-bold">Criar Projeto</a>
                 </p>
               </form>
             </div>
