--- a/html/land-page.html
+++ b/html/land-page.html
@@ -64,21 +64,21 @@
               </div>
             </div>
             <div class="card-body">
-              <form role="form" class="text-start">
+              <form id="formLogin" role="form" class="text-start">
                 <div class="input-group input-group-outline my-3">
                   <label class="form-label">Login</label>
-                  <input type="email" class="form-control">
+                  <input id="inputLogin" type="text" class="form-control">
                 </div>
                 <div class="input-group input-group-outline mb-3">
                   <label class="form-label">Senha</label>
-                  <input type="password" class="form-control">
+                  <input id="inputPassword" type="password" class="form-control">
                 </div>
                 <div class="input-group input-group-outline mb-3">
-                  <label class="form-label">Chave</label>
-                  <input type="password" class="form-control">
+                  <label class="form-label">Chave-Convite do Projeto</label>
+                  <input id="inputKey" type="text" class="form-control">
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Entrar</button>
+                  <button id="loginButton" type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Entrar</button>
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Não tem uma conta?
@@ -134,8 +134,8 @@
 <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="/js/material-dashboard.min.js?v=3.1.0"></script>
 <script src="/js/jquery.min.js"></script>
-<script src="/js/land-page.js"></script>
 <script src="/js/sweet-alert.js"></script>
+<script src="/js/land-page.js"></script>
 </body>
 
 </html>
