--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -80,7 +80,7 @@
   </aside>
   <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg ">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" data-scroll="true">
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" data-scroll="true">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -135,12 +135,15 @@
                 <button id="btZoomReset" class="btn btn-outline-white"><i class="material-icons icon-button">zoom_out_map</i></button>
                 <button id="btZoomIn" class="btn btn-outline-white"><i class="material-icons icon-button">zoom_in</i></button>
                 <button id="btSave" class="btn btn-outline-white"><i class="material-icons icon-button">save</i></button>
-                <button id="btExport" class="btn btn-outline-white"><i class="material-icons icon-button">file_open</i></button>
                 <button id="btGetDados" class="btn btn-outline-white"><i class="material-icons icon-button">upload_file</i></button>
               </div>
               <br/>
               <div id="projectConfigCanvas" class="project-config-canvas"></div>
               <br/>
+              <div class="d-flex">
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do mouse para aplicar ZOOM. </p>
+              </div>
             </div>
           </div>
         </div>
