Adicionando tooltips - OK

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -127,13 +127,13 @@
                   <option value="2">Decisão</option>
                   <option value="3">Stakeholder</option>
                 </select>
-                <button id="btReset" class="btn btn-outline-white" data-toggle="Limpar Configurações"><i class="material-icons icon-button">autorenew</i></button>
-                <button id="btImport" class="btn btn-outline-white"><i class="material-icons icon-button">downloading</i></button>
-                <button id="btZoomOut" class="btn btn-outline-white"><i class="material-icons icon-button">zoom_out</i></button>
-                <button id="btZoomReset" class="btn btn-outline-white"><i class="material-icons icon-button">zoom_out_map</i></button>
-                <button id="btZoomIn" class="btn btn-outline-white"><i class="material-icons icon-button">zoom_in</i></button>
-                <button id="btSave" class="btn btn-outline-white"><i class="material-icons icon-button">save</i></button>
-                <button id="btGetDados" class="btn btn-outline-white"><i class="material-icons icon-button">upload_file</i></button>
+                <button id="btReset" class="btn btn-outline-white" data-toggle="tooltip" title="Limpar tudo"><i class="material-icons icon-button">autorenew</i></button>
+                <button id="btImport" class="btn btn-outline-white" data-toggle="tooltip" title="Recarregar dados do projeto"><i class="material-icons icon-button">downloading</i></button>
+                <button id="btZoomOut" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom Out"><i class="material-icons icon-button">zoom_out</i></button>
+                <button id="btZoomReset" class="btn btn-outline-white" data-toggle="tooltip" title="Resetar Zoom"><i class="material-icons icon-button">zoom_out_map</i></button>
+                <button id="btZoomIn" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom In"><i class="material-icons icon-button">zoom_in</i></button>
+                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar dados do projeto"><i class="material-icons icon-button">save</i></button>
+                <button id="btGetDados" class="btn btn-outline-white" data-toggle="tooltip" title="---"><i class="material-icons icon-button">upload_file</i></button>
               </div>
               <br/>
               <div id="projectConfigCanvas" class="project-config-canvas"></div>
@@ -176,7 +176,7 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Aluno Mais Motivado</p>
+                <p class="text-sm mb-0 text-capitalize">Aluno mais motivado</p>
                 <h4 class="mb-0">Fulano</h4>
               </div>
             </div>
@@ -196,7 +196,7 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Aluno Menos Motivado</p>
+                <p class="text-sm mb-0 text-capitalize">Aluno menos motivado</p>
                 <h4 class="mb-0">Beltrano</h4>
               </div>
             </div>
@@ -216,7 +216,7 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Curso Mais Motivado</p>
+                <p class="text-sm mb-0 text-capitalize">Curso mais motivado</p>
                 <h4 class="mb-0">Ciência da Computação</h4>
               </div>
             </div>
@@ -236,7 +236,7 @@
                 <i class="material-icons opacity-10">person</i>
               </div>
               <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Curso Menos Motivado</p>
+                <p class="text-sm mb-0 text-capitalize">Curso menos motivado</p>
                 <h4 class="mb-0">Física</h4>
               </div>
             </div>
@@ -261,7 +261,7 @@
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Evolução Geral da Motivação </h6>
+              <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
               <div class="card-footer p-1 align-right">
@@ -280,7 +280,7 @@
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Evolução Geral da Motivação </h6>
+              <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
               <div class="card-footer p-1 align-right">
@@ -299,7 +299,7 @@
               </div>
             </div>
             <div class="card-body">
-              <h6 class="mb-0 "> Evolução Geral da Motivação </h6>
+              <h6 class="mb-0 "> Evolução geral da motivação </h6>
               <p class="text-sm "> --- </p>
               <hr class="dark horizontal">
               <div class="card-footer p-1 align-right">
