Automatically generating the sankey diagram for the project. PART 3

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -139,7 +139,10 @@
               <br/>
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do mouse para aplicar ZOOM. </p>
+                <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do MOUSE para aplicar ZOOM. </p>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <i class="material-icons text-sm my-auto me-1">info</i>
+                <p class="mb-0 text-sm"> Clique com o botão DIREITO do MOUSE para opção de REMOÇÃO. </p>
               </div>
             </div>
           </div>
