Automatically generating the sankey diagram for the project. PART 8

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -133,6 +133,7 @@
                 <button id="btZoomReset" class="btn btn-outline-white" data-toggle="tooltip" title="Resetar Zoom"><i class="material-icons icon-button">zoom_out_map</i></button>
                 <button id="btZoomIn" class="btn btn-outline-white" data-toggle="tooltip" title="Zoom In"><i class="material-icons icon-button">zoom_in</i></button>
                 <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar dados do projeto"><i class="material-icons icon-button">save</i></button>
+                <button id="btTest" class="btn btn-outline-white" data-toggle="tooltip" title="Testes"><i class="material-icons icon-button">bolt</i></button>
               </div>
               <br/>
               <div id="projectConfigCanvas" class="project-config-canvas"></div>
@@ -605,6 +606,7 @@
   <script src="/js/jsonata.min.js"></script>
   <script src="/js/underscore.js"></script>
   <script src="/js/amCharts.js"></script>
+  <script src="/js/notify.min.js"></script>
   <script src="/js/flow.js"></script>
   <script src="/js/animated.js"></script>
   <script src="/js/core/bootstrap.bundle.min.js"></script>
