Automatically generating the sankey diagram for the project. PART 11

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -122,10 +122,11 @@
               <br/>
               <div class="align-right">
                 Modo:
-                <select id="selectNode" class="select-node">
-                  <option value="1">Etapa</option>
-                  <option value="2">Decisão</option>
-                  <option value="3">Stakeholder</option>
+                <select id="selectNodeType" class="select-node">
+                  <option value="-3" class="select-divider">-- PADRÃO --</option>
+                  <option value="-1">Etapa</option>
+                  <option value="0">Decisão</option>
+                  <option value="-2" class="select-divider">-- STAKEHOLDERS --</option>
                 </select>
                 <button id="btReset" class="btn btn-outline-white" data-toggle="tooltip" title="Limpar tudo"><i class="material-icons icon-button">autorenew</i></button>
                 <button id="btImport" class="btn btn-outline-white" data-toggle="tooltip" title="Recarregar dados do projeto"><i class="material-icons icon-button">downloading</i></button>
