--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -65,6 +65,10 @@
                 <div class="card-body">
                   <form role="form" id="formSignup">
                     <div class="input-group input-group-outline mb-3">
+                      <label class="form-label">Nome</label>
+                      <input id="inputTextName" type="text" class="form-control">
+                    </div>
+                    <div class="input-group input-group-outline mb-3">
                       <label class="form-label">Login</label>
                       <input id="inputTextLogin" type="text" class="form-control">
                     </div>
