Adding student courses

--- a/html/register-project.html
+++ b/html/register-project.html
@@ -36,7 +36,7 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="/css/material-dashboard.css?v=3.1.0" rel="stylesheet" />
+  <link id="pagestyle" href="/css/material-dashboard.css" rel="stylesheet" />
 </head>
 
 <body class="">
@@ -103,7 +103,7 @@
   <!-- Github buttons -->
   <script async defer src="/js/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/js/material-dashboard.min.js?v=3.1.0"></script>
+  <script src="/js/material-dashboard.min.js"></script>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/register-project.js"></script>
