--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -36,7 +36,7 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="/css/material-dashboard.css?v=3.1.0" rel="stylesheet" />
+  <link id="pagestyle" href="/css/material-dashboard.css" rel="stylesheet" />
   <link href="/css/drawflow.css" rel="stylesheet" />
   <link href="/css/custom.css" rel="stylesheet" />
 </head>
@@ -121,7 +121,7 @@
               <hr class="dark horizontal my-0">
               <br/>
               <div class="align-right">
-                Modo:
+                <label for="selectNodeType" class="form-label">Modo:</label>
                 <select id="selectNodeType" class="select-node">
                   <option value="-3" class="select-divider">-- PADRÃO --</option>
                   <option value="-1">Etapa</option>
