--- a/html/land-page.html
+++ b/html/land-page.html
@@ -36,7 +36,7 @@
   <!-- Material Icons -->
   <link href="/css/iconsRound.css" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="/css/material-dashboard.css?v=3.1.0" rel="stylesheet" />
+  <link id="pagestyle" href="/css/material-dashboard.css" rel="stylesheet" />
 </head>
 
 <body class="bg-gray-200">
@@ -132,7 +132,7 @@
 <!-- Github buttons -->
 <script async defer src="/js/buttons.js"></script>
 <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-<script src="/js/material-dashboard.min.js?v=3.1.0"></script>
+<script src="/js/material-dashboard.min.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/sweet-alert.js"></script>
 <script src="/js/land-page.js"></script>
