--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -36,7 +36,8 @@
   <!-- Material Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
   <!-- CSS Files -->
-  <link id="pagestyle" href="/css/material-dashboard.css?v=3.1.0" rel="stylesheet" />
+  <link id="pagestyle" href="/css/material-dashboard.css" rel="stylesheet" />
+  <link href="/css/custom.css" rel="stylesheet" />
 </head>
 
 <body class="">
@@ -65,20 +66,25 @@
                 <div class="card-body">
                   <form role="form" id="formSignup">
                     <div class="input-group input-group-outline mb-3">
-                      <label class="form-label">Nome</label>
-                      <input id="inputTextName" type="text" class="form-control">
+                      <label for="inputTextName" class="form-label">Nome</label>
+                      <input id="inputTextName" type="text" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
-                      <label class="form-label">Login</label>
-                      <input id="inputTextLogin" type="text" class="form-control">
+                      <select id="selectCourse" class="form-select select-course" aria-label="Curso" onfocusout="checkSelectedCourse()">
+                        <option value="0">Curso</option>
+                      </select>
                     </div>
                     <div class="input-group input-group-outline mb-3">
-                      <label class="form-label">Senha</label>
-                      <input id="inputTextPassword1" type="password" class="form-control">
+                      <label for="inputTextLogin" class="form-label">Login</label>
+                      <input id="inputTextLogin" type="text" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
-                      <label class="form-label">Repetir Senha</label>
-                      <input id="inputTextPassword2" type="password" class="form-control">
+                      <label for="inputTextPassword1" class="form-label">Senha</label>
+                      <input id="inputTextPassword1" type="password" class="form-control"/>
+                    </div>
+                    <div class="input-group input-group-outline mb-3">
+                      <label for="inputTextPassword2" class="form-label">Repetir Senha</label>
+                      <input id="inputTextPassword2" type="password" class="form-control"/>
                     </div>
                     <div class="text-center">
                       <button type="button" id="signUpButton" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Criar</button>
@@ -115,7 +121,7 @@
   <!-- Github buttons -->
   <script async defer src="/js/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/js/material-dashboard.min.js?v=3.1.0"></script>
+  <script src="/js/material-dashboard.min.js"></script>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/sign-up.js"></script>
