--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -62,7 +62,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white " href="/decisoes">
+          <a class="nav-link text-white " href="/project/decisions">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">quiz</i>
             </div>
