Adding decision pages - PART 2

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -612,6 +612,7 @@
   <script src="/js/flow.js"></script>
   <script src="/js/animated.js"></script>
   <script src="/js/core/bootstrap.bundle.min.js"></script>
+  <script src="/js/common.js"></script>
   <script src="/js/drawflow.js" type="module"></script>
   <script src="/js/dashboard.js" type="module"></script>
 </body>
