--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -134,59 +134,7 @@
                           <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Custo</th>
                         </tr>
                         </thead>
-                        <tbody id="tableQuestions">
-                        <tr>
-                          <td>
-                            <div class="d-flex px-2 py-1">
-                              <div>
-                                <i class="material-icons opacity-10">not_listed_location</i>&nbsp;
-                              </div>
-                              <div class="d-flex flex-column justify-content-center">
-                                <h6 class="mb-0 text-sm">Com quantos paus se faz uma canoa?</h6>
-                              </div>
-                            </div>
-                          </td>
-                          <td>
-                            <div class="mt-2">
-                              <select id="selectExpectancy" class="star-rating">
-                                <option value="0">0</option>
-                                <option value="6">6</option>
-                                <option value="5">5</option>
-                                <option value="4">4</option>
-                                <option value="3">3</option>
-                                <option value="2">2</option>
-                                <option value="1">1</option>
-                              </select>
-                            </div>
-                          </td>
-                          <td>
-                            <div class="mt-2">
-                              <select id="selectValue" class="star-rating">
-                                <option value="0">0</option>
-                                <option value="6">6</option>
-                                <option value="5">5</option>
-                                <option value="4">4</option>
-                                <option value="3">3</option>
-                                <option value="2">2</option>
-                                <option value="1">1</option>
-                              </select>
-                            </div>
-                          </td>
-                          <td>
-                            <div class="mt-2">
-                              <select id="selectCost" class="star-rating">
-                                <option value="0">0</option>
-                                <option value="6">6</option>
-                                <option value="5">5</option>
-                                <option value="4">4</option>
-                                <option value="3">3</option>
-                                <option value="2">2</option>
-                                <option value="1">1</option>
-                              </select>
-                            </div>
-                          </td>
-                        </tr>
-                        </tbody>
+                        <tbody id="tableQuestions"></tbody>
                       </table>
                     </div>
                   </div>
@@ -243,6 +191,7 @@
   <script src="/js/animated.js"></script>
   <script src="/js/core/bootstrap.bundle.min.js"></script>
   <script src="/js/star-rating.js"></script>
+  <script src="/js/common.js"></script>
   <script src="/js/my-decisions.js" type="module"></script>
 </body>
 
