--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -128,10 +128,10 @@
                       <table class="table align-items-center mb-0">
                         <thead>
                         <tr>
-                          <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Decisões</th>
-                          <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Expectativa</th>
-                          <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Valor</th>
-                          <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Custo</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7">Decisões</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Expectativa</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Valor</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Custo</th>
                         </tr>
                         </thead>
                         <tbody id="tableQuestions"></tbody>
