Adding decision pages - PART 4

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -115,7 +115,7 @@
                 <i class="material-icons opacity-10">fact_check</i>
               </div>
               <div class="text-end pt-1">
-                <label id="labelProjectName">---</label>
+                PROJETO: <label id="labelProjectName">---</label>
                 <p class="text-sm mb-0 text-capitalize">Decisões para Tomar</p>
               </div>
             </div>
@@ -128,10 +128,11 @@
                       <table class="table align-items-center mb-0">
                         <thead>
                         <tr>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7">Decisões</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7">Decisão</th>
                           <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Expectativa</th>
                           <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Valor</th>
                           <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Custo</th>
+                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Opções</th>
                         </tr>
                         </thead>
                         <tbody id="tableQuestions"></tbody>
@@ -139,6 +140,7 @@
                     </div>
                   </div>
                 </div>
+                <br/><br/>
               </div>
               <br/><br/>
               <div class="d-flex">
