Adding decision pages - PART 5

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -121,27 +121,7 @@
             </div>
             <div class="card-body">
               <hr class="dark horizontal my-0">
-              <div class="col-lg-12 col-md-6 mb-md-0 mb-4">
-                <div class="card">
-                  <div class="card-body px-0 pb-2">
-                    <div class="table-responsive">
-                      <table class="table align-items-center mb-0">
-                        <thead>
-                        <tr>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7">Decisão</th>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Expectativa</th>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Valor</th>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Custo</th>
-                          <th class="text-uppercase text-secondary text-xx font-weight-bolder opacity-7 ps-2">Opções</th>
-                        </tr>
-                        </thead>
-                        <tbody id="tableQuestions"></tbody>
-                      </table>
-                    </div>
-                  </div>
-                </div>
-                <br/><br/>
-              </div>
+              <div class="col-lg-12 col-md-6 mb-md-0 mb-4" id="decisionCards"></div>
               <br/><br/>
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
