Adding decision pages - PART 6

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -117,6 +117,8 @@
               <div class="text-end pt-1">
                 PROJETO: <label id="labelProjectName">---</label>
                 <p class="text-sm mb-0 text-capitalize">Decisões para Tomar</p>
+                <br/>
+                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões"><i class="material-icons icon-button">save</i></button>
               </div>
             </div>
             <div class="card-body">
@@ -174,7 +176,7 @@
   <script src="/js/core/bootstrap.bundle.min.js"></script>
   <script src="/js/star-rating.js"></script>
   <script src="/js/common.js"></script>
-  <script src="/js/my-decisions.js" type="module"></script>
+  <script src="/js/my-decisions.js"></script>
 </body>
 
 </html>
