Adding decision pages - PART 9

--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -127,7 +127,7 @@
               <br/><br/>
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Informação </p>
+                <p class="mb-0 text-sm" id="labelInfo"> Informação </p>
               </div>
             </div>
           </div>
