--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -115,8 +115,7 @@
                 <i class="material-icons opacity-10">fact_check</i>
               </div>
               <div class="text-end pt-1">
-                PROJETO: <label id="labelProjectName">---</label>
-                <p class="text-sm mb-0 text-capitalize">Decisões para Tomar</p>
+                DECISÕES PARA TOMAR | <b>PROJETO:</b> <span id="labelProjectName">---</span><br/>
                 <br/>
                 <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões"><i class="material-icons icon-button">save</i></button>
               </div>
