--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -175,6 +175,7 @@
   <script src="/js/core/bootstrap.bundle.min.js"></script>
   <script src="/js/star-rating.js"></script>
   <script src="/js/jinplace.js"></script>
+  <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/common.js"></script>
   <script src="/js/my-decisions.js"></script>
 </body>
