--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -46,7 +46,7 @@
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
     <div class="sidenav-header">
       <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-      <a class="navbar-brand m-0" href=" https://demos.creative-tim.com/material-dashboard/pages/dashboard " target="_blank">
+      <a class="navbar-brand m-0" href="/dashboard">
         <img src="/img/mo-dm-logo.png" class="navbar-brand-img h-100" alt="main_logo">
         <span class="ms-1 font-weight-bold text-white"></span>
       </a>
@@ -126,7 +126,7 @@
               <br/><br/>
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm" id="labelInfo"> Informação </p>
+                <p class="mb-0 text-sm" id="labelInfo"> Clique em uma opção para modificá-la. </p>
               </div>
             </div>
           </div>
