Adding decision pages - PART 17
Dividing options from evaluations - PART 6

--- a/html/land-page.html
+++ b/html/land-page.html
@@ -67,15 +67,15 @@
               <form id="formLogin" role="form" class="text-start">
                 <div class="input-group input-group-outline my-3">
                   <label class="form-label">Login</label>
-                  <input id="inputLogin" type="text" class="form-control">
+                  <input id="inputLogin" onClick="this.select();" type="text" class="form-control">
                 </div>
                 <div class="input-group input-group-outline mb-3">
                   <label class="form-label">Senha</label>
-                  <input id="inputPassword" type="password" class="form-control">
+                  <input id="inputPassword" onClick="this.select();" type="password" class="form-control">
                 </div>
                 <div class="input-group input-group-outline mb-3">
                   <label class="form-label">Chave-Convite do Projeto</label>
-                  <input id="inputKey" type="text" class="form-control">
+                  <input id="inputKey" onClick="this.select();" type="text" class="form-control">
                 </div>
                 <div class="text-center">
                   <button id="loginButton" type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Entrar</button>
@@ -132,7 +132,7 @@
 <!-- Github buttons -->
 <script async defer src="/js/buttons.js"></script>
 <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-<script src="/js/material-dashboard.min.js"></script>
+<script src="/js/material-dashboard.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/sweet-alert.js"></script>
 <script src="/js/land-page.js"></script>
