--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -117,7 +117,7 @@
               <div class="text-end pt-1">
                 DECISÕES PARA TOMAR | <b>PROJETO:</b> <span id="labelProjectName">---</span><br/>
                 <br/>
-                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões"><i class="material-icons icon-button">save</i></button>
+                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões" onmouseover="$(`#myForm`).trigger(`jip:submit`)"><i class="material-icons icon-button">save</i></button>
               </div>
             </div>
             <div class="card-body">
