--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -67,7 +67,7 @@
                   <form role="form" id="formSignup">
                     <div class="input-group input-group-outline mb-3">
                       <label for="inputTextName" class="form-label">Nome</label>
-                      <input id="inputTextName" type="text" class="form-control"/>
+                      <input onClick="this.select();" id="inputTextName" type="text" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <select id="selectCourse" class="form-select select-course" aria-label="Curso" onfocusout="checkSelectedCourse()">
@@ -76,15 +76,15 @@
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <label for="inputTextLogin" class="form-label">Login</label>
-                      <input id="inputTextLogin" type="text" class="form-control"/>
+                      <input onClick="this.select();" id="inputTextLogin" type="text" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <label for="inputTextPassword1" class="form-label">Senha</label>
-                      <input id="inputTextPassword1" type="password" class="form-control"/>
+                      <input onClick="this.select();" id="inputTextPassword1" type="password" class="form-control"/>
                     </div>
                     <div class="input-group input-group-outline mb-3">
                       <label for="inputTextPassword2" class="form-label">Repetir Senha</label>
-                      <input id="inputTextPassword2" type="password" class="form-control"/>
+                      <input onClick="this.select();" id="inputTextPassword2" type="password" class="form-control"/>
                     </div>
                     <div class="text-center">
                       <button type="button" id="signUpButton" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Criar</button>
@@ -121,7 +121,7 @@
   <!-- Github buttons -->
   <script async defer src="/js/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
-  <script src="/js/material-dashboard.min.js"></script>
+  <script src="/js/material-dashboard.js"></script>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/sign-up.js"></script>
