--- a/html/register-project.html
+++ b/html/register-project.html
@@ -104,7 +104,11 @@
   <script async defer src="/js/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="/js/material-dashboard.js"></script>
+  <script src="/js/flow.js"></script>
+  <script src="/js/animated.js"></script>
+  <script src="/js/core/bootstrap.bundle.min.js"></script>
   <script src="/js/jquery.min.js"></script>
+  <script src="/js/notify.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/register-project.js"></script>
 </body>
