Adding results page - PART 1

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -69,6 +69,14 @@
             <span class="nav-link-text ms-1">Decisões</span>
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-white " href="/project/results">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">military_tech</i>
+            </div>
+            <span class="nav-link-text ms-1">Resultados</span>
+          </a>
+        </li>
       </ul>
     </div>
     <div class="sidenav-footer position-absolute w-100 bottom-0 ">
@@ -85,7 +93,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Páginas</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Dashboard</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">Dashboard <label id="labelProjectName" class="project-name">---</label></h6>
+          <h6 class="font-weight-bolder mb-0">DASHBOARD <label id="labelProjectName" class="project-name">---</label></h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -143,7 +151,8 @@
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
                 <p class="mb-0 text-sm"> Segure SHIFT e utilize o SCROLL do MOUSE para aplicar ZOOM. </p>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              </div>
+              <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
                 <p class="mb-0 text-sm"> Clique com o botão DIREITO do MOUSE para opção de REMOÇÃO. </p>
               </div>
