--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -94,7 +94,7 @@
             <li class="breadcrumb-item text-sm"><a class="opacity-5 text-dark" href="javascript:;">Páginas</a></li>
             <li class="breadcrumb-item text-sm text-dark active" aria-current="page">Minhas Decisões</li>
           </ol>
-          <h6 class="font-weight-bolder mb-0">MINHAS DECISÕES <label class="project-name">&nbsp;</label></h6>
+          <h6 class="font-weight-bolder mb-0">MINHAS DECISÕES <label id="labelProjectName" class="project-name">---</label></h6>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
@@ -122,15 +122,18 @@
               <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
                 <i class="material-icons opacity-10">fact_check</i>
               </div>
-              <div class="text-end pt-1">
-                DECISÕES PARA TOMAR | <b>PROJETO:</b> <span id="labelProjectName">---</span><br/>
-                <br/>
-                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões" onmouseover="$(`#myForm`).trigger(`jip:submit`)"><i class="material-icons icon-button">save</i></button>
+              <div class="padding-left-80 pt-1">
+                DECISÕES PARA TOMAR
               </div>
             </div>
             <div class="card-body">
               <hr class="dark horizontal my-0">
               <div class="col-lg-12 col-md-6 mb-md-0 mb-4" id="decisionCards"></div>
+              <div class="text-center">
+                <button id="btSave" class="btn btn-outline-white" data-toggle="tooltip" title="Salvar decisões" onmouseover="$(`#myForm`).trigger(`jip:submit`)"><i class="material-icons icon-button">save</i></button>
+              </div>
+              <br/><br/>
+              <hr class="dark horizontal my-0">
               <br/><br/>
               <div class="d-flex">
                 <i class="material-icons text-sm my-auto me-1">info</i>
