--- a/html/results.html
+++ b/html/results.html
@@ -123,8 +123,8 @@
               <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
                 <i class="material-icons opacity-10">workspace_premium</i>
               </div>
-              <div class="pt-1 padding-left-80">
-                <label CLASS="text-2xl">DECISÃO 1</label>
+              <div class="padding-left-80 pt-1">
+                DECISÃO 1
               </div>
             </div>
             <div class="card-body">
@@ -166,120 +166,6 @@
                       </div>
                       <div class="col-sm">
                         <ol id="sortable2" class="ol-ranking" style="--length: 1" role="list">
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.2">
-                            <div class="h3-ranking">ITEM 1</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.4">
-                            <div class="h3-ranking">ITEM 2</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.6">
-                            <div class="h3-ranking">ITEM 3</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer filtered" style="--i: 0.8">
-                            <div class="h3-ranking">ITEM 4</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer filtered" style="--i: 1">
-                            <div class="h3-ranking">ITEM 5</div>
-                          </li>
-                        </ol>
-                      </div>
-                      <div class="col-sm">
-                        <ol class="ol-ranking" style="--length: 1" role="list">
-                          <li class="li-ranking cursor-pointer" style="--i: 0.2">
-                            <div class="h3-ranking">ITEM 1</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer" style="--i: 0.4">
-                            <div class="h3-ranking">ITEM 2</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer" style="--i: 0.6">
-                            <div class="h3-ranking">ITEM 3</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer" style="--i: 0.8">
-                            <div class="h3-ranking">ITEM 4</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer" style="--i: 1">
-                            <div class="h3-ranking">ITEM 5</div>
-                          </li>
-                        </ol>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <br/>
-              <div class="text-center">
-                <button class="bt-decide btn btn-outline-white" data-toggle="tooltip" title="Clique para fazer a escolha da decisão"><i class="material-icons icon-button">ads_click</i></button>
-              </div>
-              <br/>
-              <div class="d-flex">
-                <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Em caso de empate nos rankings, é possível segurar e arrastar as opções para reordená-las. </p>
-              </div>
-              <div class="d-flex">
-                <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Uma concordância a partir de 65% é considerada boa. </p>
-              </div>
-              <div class="d-flex">
-                <i class="material-icons text-sm my-auto me-1">info</i>
-                <p class="mb-0 text-sm"> Quando a primeira opção dos dois rankings forem iguais e a condordância for maior ou igual a 65%, será possível tomar uma decisão. </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <br/><br/>
-      <!-- DECISION RESULT - END -->
-      <!-- DECISION RESULT - START -->
-      <div class="row">
-        <div class="col-xl-12 col-sm-6 mb-xl-0 mb-4">
-          <div class="card">
-            <div class="card-header p-3 pt-2">
-              <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
-                <i class="material-icons opacity-10">workspace_premium</i>
-              </div>
-              <div class="pt-1 padding-left-80">
-                <label CLASS="text-2xl">DECISÃO 2</label>
-              </div>
-            </div>
-            <div class="card-body">
-              <hr class="dark horizontal my-0">
-              <div class="col-lg-12 col-md-6 mb-md-0 mb-4"></div>
-              <div class="div-results-1">
-                <div class="container-fluid div-results-2">
-                  <div class="container container-results">
-                    <div class="row row-results-header">
-                      <div class="col-sm text-center text-2xl">
-                        <b>MAIS DESEJADOS</b>
-                      </div>
-                      <div class="col-sm text-center text-2xl">
-                        <b>MOTIVAÇÃO</b>
-                      </div>
-                      <div class="col-sm text-center text-2xl">
-                        <b>CONCORDÂNCIA</b>
-                      </div>
-                    </div>
-                    <div class="row row-results">
-                      <div class="col-sm">
-                        <ol id="sortable3" class="ol-ranking" style="--length: 1" role="list">
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.2">
-                            <div class="h3-ranking">ITEM 1</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.4">
-                            <div class="h3-ranking">ITEM 2</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer dragable" style="--i: 0.6">
-                            <div class="h3-ranking">ITEM 3</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer filtered" style="--i: 0.8">
-                            <div class="h3-ranking">ITEM 4</div>
-                          </li>
-                          <li class="li-ranking cursor-pointer filtered" style="--i: 1">
-                            <div class="h3-ranking">ITEM 5</div>
-                          </li>
-                        </ol>
-                      </div>
-                      <div class="col-sm">
-                        <ol id="sortable4" class="ol-ranking" style="--length: 1" role="list">
                           <li class="li-ranking cursor-pointer dragable" style="--i: 0.2">
                             <div class="h3-ranking">ITEM 1</div>
                           </li>
