--- a/html/results.html
+++ b/html/results.html
@@ -272,6 +272,7 @@
   <script src="/js/core/bootstrap.bundle.min.js"></script>
   <script src="/js/star-rating.js"></script>
   <script src="/js/Sortable.js"></script>
+  <script src="/js/math.js"></script>
   <script src="/js/jinplace.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/common.js"></script>
