Adding results page - PART 9

--- a/html/results.html
+++ b/html/results.html
@@ -40,6 +40,7 @@
   <link href="/css/drawflow.css" rel="stylesheet" />
   <link href="/css/custom.css" rel="stylesheet" />
   <link href="/css/star-rating.css" rel="stylesheet" />
+  <link href="/css/jquery.modal.min.css" rel="stylesheet" />
 </head>
 
 <body class="g-sidenav-show dark-version">
@@ -162,6 +163,7 @@
   <script src="/js/math.js"></script>
   <script src="/js/jinplace.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
+  <script src="/js/jquery.modal.min.js"></script>
   <script src="/js/common.js"></script>
   <script src="/js/results.js"></script>
 </body>
