--- a/html/results.html
+++ b/html/results.html
@@ -162,6 +162,19 @@
             </thead>
             <tbody id="tableImpacted"></tbody>
           </table>
+          <br/>
+          <div class="d-flex">
+            <i class="material-icons text-sm my-auto me-1">info</i>
+            <p class="mb-0 text-sm"> <span class="text-red">VERMELHO</span> - Impacto <b>negativo</b>. </p>
+          </div>
+          <div class="d-flex">
+            <i class="material-icons text-sm my-auto me-1">info</i>
+            <p class="mb-0 text-sm"> <span class="text-yellow">AMARELO</span> - Impacto <b>neutro</b>. </p>
+          </div>
+          <div class="d-flex">
+            <i class="material-icons text-sm my-auto me-1">info</i>
+            <p class="mb-0 text-sm"> <span class="text-green">VERDE</span> - Impacto <b>positivo</b>. </p>
+          </div>
         </div>
       </div>
     </div>
