--- a/html/register-project.html
+++ b/html/register-project.html
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="row">
             <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 start-0 text-center justify-content-center flex-column">
-              <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('/img/illustrations/illustration-signup.jpg'); background-size: cover;">
+              <div class="position-relative bg-gradient-light h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center" style="background-image: url('/img/illustrations/illustration-signup.jpg'); background-size: cover;">
               </div>
             </div>
             <div class="col-xl-4 col-lg-5 col-md-7 d-flex flex-column ms-auto me-auto ms-lg-auto me-lg-5">
@@ -69,14 +69,14 @@
                       <input onClick="this.select();" id="inputProjectName" type="text" class="form-control">
                     </div>
                     <div class="text-center">
-                      <button type="button" id="createProjectButton" class="btn btn-lg bg-gradient-primary btn-lg w-100 mt-4 mb-0">Criar</button>
+                      <button type="button" id="createProjectButton" class="btn btn-lg bg-gradient-dark btn-lg w-100 mt-4 mb-0 white-border" style="border: 1px solid slategrey!important">Criar</button>
                     </div>
                   </form>
                 </div>
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-2 text-sm mx-auto">
                     Deseja voltar para o login?
-                    <a href="/" class="text-primary text-gradient font-weight-bold">Voltar</a>
+                    <a href="/" class="text-white font-weight-bold">Voltar</a>
                   </p>
                 </div>
               </div>
