--- a/html/register-project.html
+++ b/html/register-project.html
@@ -110,6 +110,7 @@
   <script src="/js/jquery.min.js"></script>
   <script src="/js/notify.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
+  <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/register-project.js"></script>
 </body>
 
