--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -124,6 +124,7 @@
   <script src="/js/material-dashboard.js"></script>
   <script src="/js/jquery.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
+  <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/sign-up.js"></script>
 </body>
 
